--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ main {
     display: flex;
     margin: 20px;
     gap: 0 20px;
+    align-items: flex-start;
 
     .CorpoElemento {
         display: flex;
