--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ main {
     main {
         flex-direction: column;
         gap: 20px 0;
+        align-items: stretch;
     }
     * {
         overflow: scroll;
