--- a/style.css
+++ b/style.css
@@ -9,10 +9,11 @@ body {
 }
 
 header {
-    background-color: #4F5A63;
+    color: black;
+    background: white;
+    box-shadow: 0px 0px 0px 0.2px #C5C8CB inset;
     margin: 0;
     padding: 20px;
-    color: white;
     display: flex;
     justify-content: center;
 }
