--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ main {
         font-size: 24px;
     }
 
-    #CampoDadosDb {
+    #CampoDadosDb, #CampoDevedoresDb {
         font-variant: small-caps;
         margin-bottom: 20px;
     }
