--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     margin: 0;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 body {
@@ -13,7 +13,7 @@ header {
     background: white;
     box-shadow: 0px 0px 0px 0.2px #C5C8CB inset;
     margin: 0;
-    padding: 20px;
+    padding: 10px;
     display: flex;
     justify-content: center;
 }
@@ -98,10 +98,10 @@ main {
 
 #Copyright {
     position: absolute;
-    top: 96dvh;
-    width: 99dvw;
-    text-align: end;
+    bottom: 2dvh;
+    right: 1dvw;
     color: #4F5A63;
+    text-align: end;
 }
 
 @media screen and (max-width: 767px) {
