--- a/new.css
+++ b/new.css
@@ -65,7 +65,7 @@ main {
         margin: 20px;
         gap: 0 20px;
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(100px, 25dvw));
+        grid-template-columns: repeat(auto-fit, minmax(100px, 25%));
         gap: 10px;
         align-items: flex-start;
         overflow: initial;
