--- a/new.css
+++ b/new.css
@@ -177,7 +177,14 @@ main {
         margin: 20px;
         box-shadow: 0px -0.5px 0px 0.2px #C5C8CB inset;
         border-radius: 8px;
-        min-width: fit-content
+        min-width: fit-content;
+        gap: 8px;
+
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+        }
     }
 
 }
