--- a/new.css
+++ b/new.css
@@ -92,16 +92,14 @@ main {
 
     #Produtos {
         background-color: white;
-        display: grid;
         margin: 20px;
-        gap: 0 20px;
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(100px, 23%));
-        overflow-y: scroll;
         gap: 10px;
         align-items: flex-start;
-        overflow: initial;
         flex-grow: 1;
+        max-height: calc(100dvh - 130px);
+        overflow: scroll;
 
         .Produto {
             display: flex;
@@ -112,7 +110,7 @@ main {
             border-radius: 8px;
             justify-content: space-between;
             background-color: white;
-
+            
             img {
                 max-height: 70%;
                 -webkit-user-drag: none;
