--- a/new.css
+++ b/new.css
@@ -18,8 +18,11 @@
 
 body {
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
-    margin: 0 0;
+    margin: 0;
+    height: 100dvh;
+    max-height: 100dvh;
 }
+
 
 input, select {
     border-width: 0.2px;
@@ -87,19 +90,21 @@ header {
 
 
 main {
-
     display: flex;
+    height: calc(100dvh - 130px); /* Ajuste conforme seu header */
+    overflow: hidden;
 
     #Produtos {
         background-color: white;
         margin: 20px;
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(100px, 23%));
+        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
         gap: 10px;
         align-items: flex-start;
         flex-grow: 1;
         max-height: calc(100dvh - 130px);
-        overflow: scroll;
+        flex-grow: 1;
+        overflow-y: auto;
 
         .Produto {
             display: flex;
