--- a/style.css
+++ b/style.css
@@ -1,11 +1,58 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css');
+
+@keyframes SurgirDaDireita {
+    0% {
+        transform: translateX(100dvw);
+    }
+    100% {
+        transform: translateX(0px);
+    }
+}
+
 * {
     margin: 0;
     overflow: hidden;
+    transition-duration: .4s;
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0 0;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    margin: 0;
+    height: 100dvh;
+    max-height: 100dvh;
+}
+
+
+input, select {
+    border-width: 0.2px;
+    border-radius: 8px;
+    border: none;
+    box-shadow: 0px -0.5px 0px 0.2px #C5C8CB inset;
+    transition-duration: 0.4s;
+    padding: 10px;
+    background-color: white;
+}
+
+input:hover, select:hover {
+    box-shadow: 0px 0px 0px 1px #4F5A63 inset;
+    border: none;
+}
+
+.BotaoPrimario {
+    border: none;
+    background-color: #4F5A63;
+    transition-duration: 0.4s;
+    color: white;
+    cursor: pointer;
+    box-shadow: none;
+    padding: 8px;
+    border-radius: 5px;
+    font-size: medium;
+    font-weight: normal;
+}
+.BotaoPrimario:hover {
+    background-color: #14222F;
 }
 
 header {
@@ -15,85 +62,136 @@ header {
     margin: 0;
     padding: 10px;
     display: flex;
+    flex-direction: column;
+    gap: 8px;
     justify-content: center;
-}
 
-main {
-    background-color: white;
-    display: flex;
-    margin: 20px;
-    gap: 0 20px;
-    align-items: flex-start;
-
-    .CorpoElemento {
-        display: flex;
-        flex-direction: column;
-        flex-grow: 1;
-        box-shadow: 0px -0.5px 0px 0.2px #C5C8CB inset;
-        padding: 10px;
-        border-radius: 10px;
+    h1 {
+        align-self: center;
     }
 
-    .CorpoElemento.Principal {
-        width: 25dvw;
-        @media screen and (max-width: 767px) {
-            width: unset;
+    nav {
+        display: flex;
+        justify-content: space-around;
+
+        .SeletorDeAba {
+            padding: 8px;
+            flex-grow: 1;
+            text-align: center;
+            border-radius: 8px;
+            transition-duration: .4s;
+        }
+        .SeletorDeAba:hover {
+            cursor: pointer;
+            background-color: #C5C8CB;
+        }
+    }
+}
+
+
+main {
+    display: flex;
+    height: calc(100dvh - 130px); /* Ajuste conforme seu header */
+    overflow: hidden;
+
+    #Produtos {
+        background-color: white;
+        margin: 20px;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+        gap: 10px;
+        align-items: flex-start;
+        flex-grow: 1;
+        max-height: calc(100dvh - 130px);
+        grid-auto-rows: max-content;
+        overflow: visible;
+
+        .Produto {
+            display: flex;
+            flex-direction: column;
+            box-shadow: 0px -0.5px 0px 0.2px #C5C8CB inset;
+            padding: 10px;
+            aspect-ratio: 1 / 1;
+            border-radius: 8px;
+            justify-content: space-between;
+            background-color: white;
+            max-height: 25dvw;
+            
+            img {
+                max-height: 70%;
+                -webkit-user-drag: none;
+                align-self: anchor-center;
+                object-fit: scale-down;
+            }
+
+            label {
+                user-select: none;
+                -moz-user-select: none;
+
+                i, form input {
+                    display: none;
+                }
+
+                form input {
+                    box-shadow: 0px -0.5px 0px 0.2px #C5C8CB inset;
+                }
+            }
+        }
+        .Produto:hover {
+            transform: scale(1.1);
+            cursor: pointer;
+            z-index: 1;
+        }
+        .Produto.Selecionado {
+            box-shadow: 0px -0.5px 0px 2px #3a92d3 inset;
+            overflow: visible;
+
+            i, form input {
+                display: unset;
+            }
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 9px;
+        }
+        
+        h1 {
+            margin-top: 0px;
+            margin-bottom: 20px;
+            font-size: 24px;
+        }
+
+        #CampoDadosDb, #CampoDevedoresDb {
+            font-variant: small-caps;
+            margin-bottom: 20px;
         }
     }
 
-    .CorpoElemento.Categoria {
-        box-shadow: none;
-        padding: unset;
-        gap: 12px;
+    aside {
+        display: none;
     }
-
-    form {
+    aside.Ativo {
         display: flex;
         flex-direction: column;
-        gap: 9px;
-    }
-
-    input, select {
-        border-width: 0.2px;
-        border-radius: 8px;
-        border: none;
-        box-shadow: 0px -0.5px 0px 0.2px #C5C8CB inset;
-        transition-duration: 0.4s;
+        animation-name: SurgirDaDireita;
+        animation-duration: .4s;
+        max-width: 25dvw;
         padding: 10px;
-        background-color: white;
+        margin: 20px;
+        box-shadow: 0px -0.5px 0px 0.2px #C5C8CB inset;
+        border-radius: 8px;
+        min-width: fit-content;
+        gap: 8px;
+
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+        }
     }
 
-    input:hover, select:hover {
-        box-shadow: 0px 0px 0px 1px #4F5A63 inset;
-        border: none;
-    }
-
-    .BotaoPrimario {
-        border: none;
-        background-color: #4F5A63;
-        transition-duration: 0.4s;
-        color: white;
-        cursor: pointer;
-        box-shadow: none;
-        padding: 8px;
-        border-radius: 5px;
-        font-size: medium;
-        font-weight: normal;
-    }
-    .BotaoPrimario:hover {
-        background-color: #14222F;
-    }
-    
-    h1 {
-        margin-top: 0px;
-        margin-bottom: 20px;
-        font-size: 24px;
-    }
-
-    #CampoDadosDb, #CampoDevedoresDb {
-        font-variant: small-caps;
-        margin-bottom: 20px;
-    }
 }
 
 #Copyright {
