--- a/style.css
+++ b/style.css
@@ -79,7 +79,8 @@ header {
             flex-grow: 1;
             text-align: center;
             border-radius: 8px;
-            transition-duration: .4s;
+            text-decoration: none;
+            color: #868686;
         }
         .SeletorDeAba:hover {
             cursor: pointer;
@@ -146,26 +147,9 @@ main {
             box-shadow: 0px -0.5px 0px 2px #3a92d3 inset;
             overflow: visible;
 
-            i, form input {
+            i, input {
                 display: unset;
             }
-        }
-
-        form {
-            display: flex;
-            flex-direction: column;
-            gap: 9px;
-        }
-        
-        h1 {
-            margin-top: 0px;
-            margin-bottom: 20px;
-            font-size: 24px;
-        }
-
-        #CampoDadosDb, #CampoDevedoresDb {
-            font-variant: small-caps;
-            margin-bottom: 20px;
         }
     }
 
