--- a/style.css
+++ b/style.css
@@ -149,6 +149,7 @@ main {
 
             i, input {
                 display: unset;
+                max-width: -webkit-fill-available;
             }
         }
     }
