--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ body {
     max-height: 100dvh;
 }
 
-
 input, select {
     border-width: 0.2px;
     border-radius: 8px;
@@ -53,6 +52,11 @@ input:hover, select:hover {
 }
 .BotaoPrimario:hover {
     background-color: #14222F;
+}
+
+.ScrollContent {
+    overflow: scroll;
+    border-radius: 8px;
 }
 
 header {
@@ -172,11 +176,6 @@ main {
         gap: 8px;
         max-height: fit-content;
 
-        #AsideContents {
-            overflow: scroll;
-            border-radius: 8px;
-        }
-
         h4 {
             margin-bottom: 8px;
         }
@@ -235,6 +234,9 @@ main {
         box-shadow: 0px -0.5px 0px 0.2px #C5C8CB inset;
         padding: 10px;
         border-radius: 18px;
+        max-height: fit-content;
+        background-color: white;
+        flex-grow: 1;
 
         form {
             display: flex;
