--- a/style.css
+++ b/style.css
@@ -10,6 +10,15 @@
     }
 }
 
+@keyframes Rotacao {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 * {
     margin: 0;
     overflow: hidden;
@@ -58,6 +67,17 @@ input:hover, select:hover {
     overflow: scroll;
     border-radius: 8px;
 }
+
+.Carregando {
+    width: 48px;
+    height: 48px;
+    border: 5px solid #4F5A63;
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: Rotacao 1s linear infinite;
+} 
 
 header {
     color: black;
