--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ input:hover, select:hover {
 }
 
 .Carregando {
-    width: 10%;
+    width: clamp(1px, 10%, 48px);
     aspect-ratio: 1 / 1;
     border: 5px solid #4F5A63;
     border-bottom-color: transparent;
