--- a/style.css
+++ b/style.css
@@ -71,6 +71,9 @@ input:hover, select:hover {
 .ScrollContent {
     overflow: scroll;
     border-radius: 8px;
+    display: inherit;
+    flex-direction: inherit;
+    gap: inherit;
 }
 
 .Carregando {
@@ -130,7 +133,7 @@ main {
     margin: 20px;
     gap: 20px;
 
-    #Produtos {
+    .Produtos {
         background-color: white;
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
@@ -262,6 +265,7 @@ main {
         max-height: fit-content;
         background-color: white;
         flex-grow: 1;
+        gap: 8px;
 
         form {
             display: flex;
