Produto não-selecionável não vai ser afetado pelo hover

--- a/style.css
+++ b/style.css
@@ -180,6 +180,10 @@ main {
             cursor: pointer;
             z-index: 1;
         }
+        .Produto.NaoSelecionavel:hover {
+            transform: unset;
+            cursor: unset;
+        }
         .Produto.Selecionado {
             box-shadow: 0px -0.5px 0px 2px #3a92d3 inset;
             overflow: visible;
