--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ header {
 main {
     display: flex;
     height: calc(100dvh - 164px);
-    overflow: hidden;
+    overflow: visible;
     margin: 20px;
     gap: 20px;
 
