--- a/style.css
+++ b/style.css
@@ -133,13 +133,14 @@ main {
     .Produtos {
         background-color: white;
         display: grid;
-        grid-auto-flow: column;
+        grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
         gap: 10px;
         flex-grow: 1;
-        max-height: calc(100dvh - 130px);
         grid-auto-rows: max-content;
-        overflow: visible;
-        justify-content: start;
+        overflow-y: auto;
+        padding: 10px;
+        align-content: start;
+        transition: grid-template-columns 0.4s ease;
         
         .Produto {
             display: flex;
@@ -183,7 +184,7 @@ main {
             border-radius: 8px;
         }
         .Produto:hover {
-            transform: scale(1.1);
+            transform: scale(1.05);
             cursor: pointer;
             z-index: 1;
         }
@@ -202,6 +203,13 @@ main {
         }
 
     };
+    .Produtos#Produtos {
+        max-height: calc(100dvh - 130px);
+    }
+    .Produtos#Produtos:has(.Produto:first-child:last-child) {
+        grid-template-columns: 25dvw;
+        justify-content: start;
+    }
 
     aside {
         display: none;
