--- a/style.css
+++ b/style.css
@@ -47,6 +47,26 @@ input:hover, select:hover {
     border: none;
 }
 
+select, ::picker(select) {
+    appearance: base-select;
+}
+::picker(select) {
+    border: none;
+    box-shadow: 0px -0.5px 0px 0.2px #C5C8CB inset;
+}
+option:checked {
+    font-weight: bold;
+    background-color: #ccc;
+}
+select::picker-icon {
+    color: #999;
+    content: '▼';
+    transition: 0.4s rotate;
+}
+select:open::picker-icon {
+    rotate: 180deg;
+}
+
 .BotaoPrimario {
     border: none;
     background-color: #4F5A63;
