--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,25 +1,29 @@
 .page {
   box-sizing: border-box;
+  background-color: white;
 
   textarea {
     width: 100dvw;
     height: 100dvh;
     margin: 0;
-    background-color: white;
+    border: 0;
+    padding: 10px;
+    background-color: transparent;
     color: black;
     font-family: Arial, Helvetica, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    font-size: 16px;
+    z-index: 1;
   }
 
-  button {
+  h3 {
     position: fixed;
     bottom: 10px;
     right: 10px;
     padding: 10px;
-    border-radius: 999px;
     border: none;
-    cursor: pointer;
-    background-color: rgb(17, 157, 17);
+    color: rgba(0, 0, 0, 0.286);
+    z-index: 0;
   }
 }
