--- a/app/page.module.css
+++ b/app/page.module.css
@@ -10,7 +10,7 @@
     padding: 10px;
     background-color: transparent;
     color: black;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: monospace;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-size: 16px;
@@ -21,7 +21,6 @@
     position: fixed;
     bottom: 10px;
     right: 10px;
-    padding: 10px;
     border: none;
     color: rgba(0, 0, 0, 0.286);
     z-index: 0;
